<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="energyVM"
            type="com.wemadefun.neurality.ui.EnergyViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_sunset_nocurve"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView_energy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:fontFamily="@font/roboto_light"
                android:paddingEnd="4dp"
                android:text="@string/energy_colon"
                android:textColor="@color/white"
                tools:ignore="RtlSymmetry"
                tools:text="Energy:" />

            <TextView
                android:id="@+id/text_energy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@{energyVM.energyStringLiveData}"
                android:textColor="@color/white"
                tools:text="2/5" />

            <TextView
                android:id="@+id/text_next_energy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:fontFamily="@font/roboto_medium"
                android:gravity="end"
                android:text="@{energyVM.energyTimeLeftLiveData}"
                android:textColor="@color/white"
                tools:text="14:31" />
        </LinearLayout>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/anim"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/no_energy"
            android:textColor="@color/text_darkgray"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/anim" />


        <Button
            android:id="@+id/button_get_premium"
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_sun_curved_24"
            android:drawableStart="@drawable/ic_crown"
            android:drawablePadding="8dp"
            android:fontFamily="@font/roboto_medium"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/get_premium"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_text" />

        <Button
            android:id="@+id/button_free_energy"
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/curved_matgreen_24dp"
            android:drawableStart="@drawable/ic_icons8_video_1"
            android:drawablePadding="8dp"
            android:ellipsize="end"
            android:fontFamily="@font/roboto_medium"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/free_energy"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_text" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>